--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "openai": "^4.0.0",
-    "shopify-api-node": "^3.12.6"
+    "shopify-api-node": "^3.12.6",
+    "dotenv": "^16.0.3",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 } 
